--- a/index.html
+++ b/index.html
@@ -9,61 +9,80 @@
 </head>
 
 <body>
+    <header>
+        <nav class="navbar">
+            <a href="#" class="logo">
+                <img src="images/uidesigndaily-logo.svg" alt="Logo">
+            </a>
+            <ul class="nav-links">
+                <li class="nav-item"><a href="#">Designs</a></li>
+                <li class="nav-item"><a href="#">About</a></li>
+                <li class="nav-item"><a href="#">License</a></li>
+                <li class="nav-item"><a href="#">Blog</a></li>
+                <li class="nav-item"><a href="#">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
     <div class="main">
         <div class="flex-container">
             <div class="flex-item">
-                <div class="card" style="width: 15rem;">
+                <div class="card" style="width: 20rem;">
                     <div class="card-img">
-                        <img src="Images/Jeep.jpg" class="card-img-top img-fluid" alt="...">
+                        <img src="Images/jeep.jpeg" class="card-img-top img-fluid" alt="...">
+                        <div class="overlay overlay-bg"></div>
                     </div>
                     <div class="card-body">
-                        <span class="tag">Technology</span>
+                        <span class="tag technology">Technology</span>
                         <h5 class="card-title">Why is the tesla cybertruck designed the way it is</h5>
                         <p class="card-text">An exploration into the truck's polarizing design</p>
-                        <div class="author">
-                            <img src="images/person_1.jpg" class="img-fluid">
-                            <div class="author-detail">
-                                <a href="#">Carrie Brewer</a>
-                                <p>2h ago</p>
-                            </div>
+
+                    </div>
+                    <div class="author">
+                        <img src="images/person_1.jpg" class="img-fluid">
+                        <div class="author-detail">
+                            <a href="#">Carrie Brewer</a>
+                            <p>2 h ago</p>
                         </div>
                     </div>
                 </div>
             </div>
             <div class="flex-item">
-                <div class="card" style="width: 15rem;">
+                <div class="card" style="width: 20rem;">
                     <div class="card-img">
-                        <img src="Images/Jeep.jpg" class="card-img-top img-fluid" alt="...">
+                        <img src="Images/ballon.png" class="card-img-top img-fluid" alt="...">
+                        <div class="overlay overlay-bg"></div>
                     </div>
                     <div class="card-body">
-                        <span class="tag">Technology</span>
-                        <h5 class="card-title">Why is the tesla cybertruck designed the way it is</h5>
-                        <p class="card-text">An exploration into the truck's polarizing design</p>
-                        <div class="author">
-                            <img src="images/person_1.jpg" class="img-fluid">
-                            <div class="author-detail">
-                                <a href="#">Carrie Brewer</a>
-                                <p>2h ago</p>
-                            </div>
+                        <span class="tag popular">Popular</span>
+                        <h5 class="card-title">How to keep Going When You Don't Know What's Next</h5>
+                        <p class="card-text">The future can be scary, but there are ways to deal with that fear.</p>
+
+                    </div>
+                    <div class="author">
+                        <img src="images/testimonial3.png" class="img-fluid">
+                        <div class="author-detail">
+                            <a href="#">Jerome Walton</a>
+                            <p>Yesterday</p>
                         </div>
                     </div>
                 </div>
             </div>
             <div class="flex-item">
-                <div class="card" style="width: 15rem;">
+                <div class="card" style="width: 20rem;">
                     <div class="card-img">
-                        <img src="Images/Jeep.jpg" class="card-img-top img-fluid" alt="...">
+                        <img src="Images/load.png" class="card-img-top img-fluid" alt="...">
+                        <div class="overlay overlay-bg"></div>
                     </div>
                     <div class="card-body">
-                        <span class="tag">Technology</span>
-                        <h5 class="card-title">Why is the tesla cybertruck designed the way it is</h5>
-                        <p class="card-text">An exploration into the truck's polarizing design</p>
-                        <div class="author">
-                            <img src="images/person_1.jpg" class="img-fluid">
-                            <div class="author-detail">
-                                <a href="#">Carrie Brewer</a>
-                                <p>2h ago</p>
-                            </div>
+                        <span class="tag design">Design</span>
+                        <h5 class="card-title">10 Rules of Dashboard Design</h5>
+                        <p class="card-text">Dashboard Design Guidelines</p>
+                    </div>
+                    <div class="author">
+                        <img src="images/testimonial2.png" class="img-fluid">
+                        <div class="author-detail">
+                            <a href="#">Lewis Daniels</a>
+                            <p>23 Dec 2019</p>
                         </div>
                     </div>
                 </div>
@@ -71,6 +90,20 @@
         </div>
 
     </div>
+    <footer class="footer">
+        <nav>
+            <a href="#" class="footer-menu-item">Terms & Conditions</a>
+            <a href="#" class="footer-menu-item">Privacy Policy</a>
+        </nav>
+        <p class="copyright">&copy;UIDesignDaily 2020</p>
+        <div class="social-links">
+            <a href="#"><img src="images/t-logo.svg" class="img-fluid"></a>
+            <a href="#"><img src="images/be-logo.svg" class="img-fluid"></a>
+            <a href="#"><img src="images/dribb-logo.svg" class="img-fluid"></a>
+            <a href="#"><img src="images/in-logo.svg" class="img-fluid"></a>
+            <a href="#"><img src="images/f-logo.svg" class="img-fluid"></a>
+        </div>
+    </footer>
 </body>
 
 </html>
