--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
     </header>
     <div class="mainn">
         <article>
-            <div class="main">
+            <img src="Images/day_997.png" class="img-fluid" alt="article-img">
+            <!-- <div class="main">
                 <div class="flex-container">
                     <div class="flex-item">
                         <div class="card" style="width: 15rem;">
@@ -93,7 +94,7 @@
                     </div>
                 </div>
 
-            </div>
+            </div> -->
         </article>
         <aside>
             <div class="details">
@@ -118,7 +119,7 @@
                     <a href="#">
                         <div class="post-wrapper-container">
                             <div class="post-wrapper-container-img">
-                                <img class="post-image img-fluid" src="images/5e7bb0b3b789980012267fc6.png">
+                                <img class="post-image img-fluid" src="images/5f11846accef110012662569.png">
                             </div>
                             <div class="post-details-container">
                                 Sponsored
